--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-  
+<meta name="google-site-verification" content="vUECXt5poge5aDyA-2l7qz0LR8R9buEecqm4Llr9QLY" />   
+<meta name="naver-site-verification" content="a1e8a28e97ff359d843c8f736f165a758436430e" />  
   
   
   <title>자동차보험 가장 싼 곳 찾느라 고생 마세요 여기서 한 번에 끝남</title>
@@ -571,3 +571,4 @@
 
 </body>
 </html>
+
